--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
     buy things
 </title>
 <body>
+    <nav class="navbar">
+        <a href = '#bricks'>bricks</a>
+        <a href = '#technic'>technic</a>
+        <a href = '#basket'>basket</a>
+        <a href = '#contact'>contact us</a>
+    </nav>
+
     <style src='style.css'></style>
     <script src='index.js'></script>
     
