--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,17 @@
     buy things
 </title>
 <body>
-    <nav class="navbar">
-        <a href = '#bricks'>bricks</a>
-        <a href = '#technic'>technic</a>
-        <a href = '#basket'>basket</a>
-        <a href = '#contact'>contact us</a>
-    </nav>
+    
+    <header class="header">
+        <link rel="stylesheet" href="style.css"></link>
+        <nav class="navbar">
+            <a href = '#bricks'>bricks</a>
+            <a href = '#technic'>technic</a>
+            <a href = '#basket'>basket</a>
+            <a href = '#contact'>contact us</a>
+        </nav>
+    </header>
 
-    <style src='style.css'></style>
     <script src='index.js'></script>
     
 </body>
