experiments with page changing

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <header class="header">
         <link rel="stylesheet" href="style.css"></link>
         <nav class="navbar">
-            <a href = '#bricks'>bricks</a>
-            <a href = '#technic'>technic</a>
-            <a href = '#basket'>basket</a>
-            <a href = '#contact'>contact us</a>
+            <li id = bricks><a>bricks</a></li>
+            <li id = technic><a>technic</a></li>
+            <li id = basket><a>basket</a></li>
+            <li id = contact><a>contact us</a></li>
         </nav>
     </header>
 
