added clean page switching

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <title>
-    buy things
+    Store Home
 </title>
 <body>
     
     <header class="header">
         <link rel="stylesheet" href="style.css"></link>
         <nav class="navbar">
-            <li id = bricks><a>bricks</a></li>
-            <li id = technic><a>technic</a></li>
-            <li id = basket><a>basket</a></li>
-            <li id = contact><a>contact us</a></li>
+            <li id = bricks>Bricks</li>
+            <li id = basket>Basket</li>
+            <li id = contact>Contact Us</li>
         </nav>
     </header>
 
