--- a/public/items.html
+++ b/public/items.html
@@ -7,7 +7,7 @@
     <header class="header">
         <link rel="stylesheet" href="style.css"></link>
         <nav class="navbar">
-            <li id = back>Home</li>
+            <li id = home>Home</li>
             <li id = basket>Basket</li>
             <li id = contact>Contact Us</li>
         </nav>
