added website design pt1

--- a/public/basket.html
+++ b/public/basket.html
@@ -5,8 +5,15 @@
 <body>
     
     <header class="header">
+        <link rel="stylesheet" href="style.css"></link>
         <div id = home>Home</li>
     </header>
+
+    <body>
+
+        <div>Your Basket</div>
+
+    </body>
 
     <script src='basket.js'></script>
     
