--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,13 @@
             <li id = basket>Basket</li>
             <li id = contact>Contact Us</li>
         </nav>
-    </header>
+    </header>   
+    
+    <body>
+
+        <div>Home Page</div>
+
+    </body>
 
     <script src='index.js'></script>
     
