--- a/public/items.html
+++ b/public/items.html
@@ -13,6 +13,12 @@
         </nav>
     </header>
 
+    <body>
+
+        <div>Bricks go here</div>
+
+    </body>
+
     <script src='items.js'></script>
     
 </body>
