--- a/public/items.html
+++ b/public/items.html
@@ -15,7 +15,11 @@
 
     <body>
 
-        <div>Bricks go here</div>
+        <div class = brickBox>
+            <img></img>
+            <div class = price>price</div>
+            <button class="buyButton">Buy</button>
+        </div>
 
     </body>
 
