reworked files (AGAIN)

--- a/public/basket.html
+++ b/public/basket.html
@@ -6,7 +6,13 @@
     
     <header class="header">
         <link rel="stylesheet" href="style.css"></link>
-        <div id = home>Home</li>
+        <nav class="navbar">
+            <li id = home>Home</li>
+            <li id = sets>Sets</li>
+            <li id = bricks>Bricks</li>
+            <li id = basket>Basket</li>
+            <li id = contact>Contact Us</li>
+        </nav>
     </header>
 
     <body>
