--- a/public/bricks.html
+++ b/public/bricks.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="style.css"></link>
         <nav class="navbar">
             <li id = home>Home</li>
-            <li id = sets>sets</li>
+            <li id = sets>Sets</li>
+            <li id = bricks>Bricks</li>
             <li id = basket>Basket</li>
             <li id = contact>Contact Us</li>
         </nav>
