--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <header class="header">
         <link rel="stylesheet" href="style.css"></link>
         <nav class="navbar">
-            <li id = sets>sets</li>
+            <li id = home>Home</li>
+            <li id = sets>Sets</li>
             <li id = bricks>Bricks</li>
             <li id = basket>Basket</li>
             <li id = contact>Contact Us</li>
