--- a/public/sets.html
+++ b/public/sets.html
@@ -7,10 +7,13 @@
     <header class="header">
         <link rel="stylesheet" href="style.css"></link>
         <nav class="navbar">
-            <li id = home>Home</li>
-            <li id = bricks>bricks</li>
-            <li id = basket>Basket</li>
-            <li id = contact>Contact Us</li>
+            <nav class="navbar">
+                <li id = home>Home</li>
+                <li id = sets>Sets</li>
+                <li id = bricks>Bricks</li>
+                <li id = basket>Basket</li>
+                <li id = contact>Contact Us</li>
+            </nav>
         </nav>
     </header>
 
@@ -20,6 +23,6 @@
 
     </body>
 
-    <script src='items.js'></script>
+    <script src='index.js'></script>
     
 </body>
