added page functionality

--- a/public/sets.html
+++ b/public/sets.html
@@ -7,13 +7,11 @@
     <header class="header">
         <link rel="stylesheet" href="style.css"></link>
         <nav class="navbar">
-            <nav class="navbar">
-                <li id = home>Home</li>
-                <li id = sets>Sets</li>
-                <li id = bricks>Bricks</li>
-                <li id = basket>Basket</li>
-                <li id = contact>Contact Us</li>
-            </nav>
+            <li id = index>Home</li>
+            <li id = sets>Sets</li>
+            <li id = bricks>Bricks</li>
+            <li id = basket>Basket</li>
+            <li id = contact>Contact Us</li>
         </nav>
     </header>
 
@@ -24,5 +22,5 @@
     </body>
 
     <script src='index.js'></script>
-    
+
 </body>
