--- a/public/basket.html
+++ b/public/basket.html
@@ -7,7 +7,7 @@
     <header class="header">
         <link rel="stylesheet" href="style.css"></link>
         <nav class="navbar">
-            <li id = home>Home</li>
+            <li id = index>Home</li>
             <li id = sets>Sets</li>
             <li id = bricks>Bricks</li>
             <li id = basket>Basket</li>
@@ -21,6 +21,6 @@
 
     </body>
 
-    <script src='basket.js'></script>
-    
+    <script src='index.js'></script>
+
 </body>
