--- a/public/bricks.html
+++ b/public/bricks.html
@@ -7,7 +7,7 @@
     <header class="header">
         <link rel="stylesheet" href="style.css"></link>
         <nav class="navbar">
-            <li id = home>Home</li>
+            <li id = index>Home</li>
             <li id = sets>Sets</li>
             <li id = bricks>Bricks</li>
             <li id = basket>Basket</li>
@@ -25,6 +25,6 @@
 
     </body>
 
-    <script src='items.js'></script>
+    <script src='index.js'></script>
     
 </body>
