--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <title>
-    Store Home
+    Buy Things
 </title>
 <body>
     
     <header class="header">
         <link rel="stylesheet" href="style.css"></link>
-        <nav class="navbar">
-            <li id = index>Home</li>
-            <li id = sets>Sets</li>
-            <li id = bricks>Bricks</li>
-            <li id = basket>Basket</li>
-            <li id = contact>Contact Us</li>
-        </nav>
-    </header>   
-    
-    <body>
+    </header>
 
-        <div>Home Page</div>
+    <body>
 
     </body>
 
