--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,6 +12,6 @@
         
     </body>
 
-    <script src='index.js'></script>
+    <script src='index.mjs' type = "module"></script>
     
 </body>
